compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__const_annotation_wrong_5.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const my_num: String = 7\nconst my_string: MyInvalidType = \"str\"\nconst my_tuple: String = #(Ok(1), MyInvalidType, 3)\nconst my_string2: String = my_num\nconst my_string3: String = my_string\nconst my_string4: String = my_tuple"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:24
  │
1 │ const my_num: String = 7
  │                        ^

Expected type:

    String

Found type:

    Int

error: Unknown type
  ┌─ /src/one/two.gleam:2:18
  │
2 │ const my_string: MyInvalidType = "str"
  │                  ^^^^^^^^^^^^^

The type `MyInvalidType` is not defined or imported in this module.

error: Unknown variable
  ┌─ /src/one/two.gleam:3:35
  │
3 │ const my_tuple: String = #(Ok(1), MyInvalidType, 3)
  │                                   ^^^^^^^^^^^^^

The name `MyInvalidType` is not in scope here.

error: Type mismatch
  ┌─ /src/one/two.gleam:4:28
  │
4 │ const my_string2: String = my_num
  │                            ^^^^^^

Expected type:

    String

Found type:

    Int
